For the fallback profile change the menu text to "Create New Profile"

This is less confusing; also matches what the code actually does.

BUG: 440885
FIXED-IN: 21.12